fix(mobile): gap in footer

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -44,6 +44,10 @@
 }
 
 @media (max-width: 768px) {
+  .divSocialMedia {
+    gap: 1rem;
+  }
+
   .year {
     padding: 2.5rem;
   }
